# interview_assistant

./: LICENSE  README.md  compact.html  index.html  package.json  vite.config.ts
public/: audio-processor.js
src/: App.tsx  compact.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: compact-view.json
src-tauri/src/: lib.rs  main.rs
src/components/: CompactWindow.tsx  FunctionTestView.tsx  MainView.tsx  SettingsView.tsx  WelcomeView.tsx
src/hooks/: useTheme.ts
src/services/: api-tester-v2.ts  audio-capture.ts  context-manager.ts  http-client.ts  llm.ts  pdf-parser.ts  script-matcher.ts  soniox.ts  storage.ts
src/types/: index.ts  tauri.d.ts
src/utils/: keywords.ts  prompt-builder.ts
src/worklets/: audio-capture.worklet.ts
